--- a/_extensions/pset-598-599/header.tex
+++ b/_extensions/pset-598-599/header.tex
@@ -1,1 +1,4 @@
 % TODO: Add custom LaTeX header directives here
+
+\usepackage{multicol}
+\newcommand{\indep}{\perp \!\!\! \perp} % For independence symbol
