--- a/_extensions/pset-598-599/header.tex
+++ b/_extensions/pset-598-599/header.tex
@@ -2,3 +2,8 @@
 
 \usepackage{multicol}
 \newcommand{\indep}{\perp \!\!\! \perp} % For independence symbol
+
+% Handy math notations
+\DeclareMathOperator{\E}{\mathbb{E}}
+\DeclareMathOperator{\P}{\mathbb{P}}
+\DeclareMathOperator{\V}{\mathbb{V}}
