--- a/_extensions/pset-598-599/header.tex
+++ b/_extensions/pset-598-599/header.tex
@@ -5,5 +5,5 @@
 
 % Handy math notations
 \DeclareMathOperator{\E}{\mathbb{E}}
-\DeclareMathOperator{\P}{\mathbb{P}}
+\renewcommand{\P}{\mathbb{P}}
 \DeclareMathOperator{\V}{\mathbb{V}}
